# pre-commit-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fast_precommit_mcp/: __init__.py  server.py  tools.py
tests/: test_integration.py  test_tools.py
