[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-precommit-mcp"
version = "0.1.0"
description = "MCP server that streams pre-commit output using FastMCP"
requires-python = ">=3.12"
dependencies = ["fastmcp"]

[tool.hatch.build.targets.wheel]
packages = ["fast_precommit_mcp"]
